kubernetes/hw5/task3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 80
